# win32_screen_stream

./: .gitignore  CMakeLists.txt
src/: common.h  main.cpp
